# flibusta-telegram-bot

./: .dockerignore  .env.example  .env.gmail.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.codex/: instructions.md
.codex/agents/: db-agent.md  kindle-agent.md  low-memory-reviewer.md  recommender-agent.md  reviewer-agent.md  search-agent.md
.codex/prompts/: bugfix-template.md  feature-template.md  review-template.md
.codex/skills/: add-command.md  add-db-migration.md  add-tests.md  fix-search-regression.md
.github/workflows/: ci.yml  deploy-vps.yml
app/: config.py  flibusta.py  main.py  pagination.py  state.py
app/handlers/: admin.py  kindle.py
app/messages/: kindle.py
app/middlewares/: access.py
app/repositories/: access.py  cache.py  db.py  download_history.py  favorites.py  kindle_deliveries.py  kindle_settings.py  last_books.py  migrations.py  user_preferences.py
app/services/: ai_assistant.py  cached_flibusta.py  conversion.py  ebook_metadata.py  email_sender.py  intent_router.py  kindle.py  kindle_queue.py  pending_recommendations.py  query_analyzer.py  recommendation_clarifier.py  recommendation_filters.py  recommendation_packs.py  recommendations.py  search_logic.py  smtp_errors.py
deploy/: bootstrap-oracle.sh  github-secrets.md  oracle-cloud.md
docs/: prod-env-gmail.md
handoff/: CURRENT.md
tests/: test_config.py  test_covers.py  test_discovery.py  test_ebook_metadata.py  test_flibusta_parser.py  test_kindle.py  test_library_features.py
(+14 files in other folders)
