[project]
name = "flibusta-bot"
version = "0.1.0"
description = "Telegram bot for searching and downloading books from Flibusta"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4",
    "beautifulsoup4>=4.12,<5",
    "aiohttp-socks>=0.9,<1",
    "httpx[socks,http2]>=0.27,<1",
    "pydantic-settings>=2.2,<3",
    "lxml>=5.1,<6",
    "aiosmtplib>=3.0,<4",
    "aiosqlite>=0.20,<1",
    "email-validator>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
